security/opa/allow-prometheus-scrape.yaml
# allow Prometheus (monitoring ns) to scrape /metrics
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: { name: allow-prometheus-scrape, namespace: telco }
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - { protocol: TCP, port: 8080 }
