security/opa/no-latest-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyNoLatest
metadata: { name: deny-latest }
spec:
  match:
    kinds: [ { apiGroups: ["apps"], kinds: ["Deployment"] } ]
    namespaces: ["telco"]
