security/opa/no-latest-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata: { name: k8sdenynolatest }
spec:
  crd: { spec: { names: { kind: K8sDenyNoLatest } } }
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdenynolatest
      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        endswith(container.image, ":latest")
        msg := sprintf("image uses :latest tag: %v", [container.image])
      }
