security/opa/nonroot-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata: { name: k8srequirenonroot }
spec:
  crd: { spec: { names: { kind: K8sRequireNonRoot } } }
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequirenonroot
      violation[{"msg": msg}] {
        container := input.review.object.spec.template.spec.containers[_]
        not container.securityContext.runAsNonRoot
        msg := "container must set securityContext.runAsNonRoot=true"
      }
